--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "normalize.css": "^8.0.1",
-    "react": "^16.9.0",
+    "prop-types": "^15.7.2",
+    "proxy": "http://localhost:8001",
+    "react": "^16.13.1",
     "react-dom": "^16.9.0",
     "react-scripts": "3.0.0"
   },
